repair size of box in list and margin beetwen header and content on mobile

--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -23,7 +23,7 @@ body, html {
 }
 
 .container-content {
-  margin: 0 75px;
+  margin: 20px 75px 0 75px;
   padding: 10px;
   border-left: 5px solid $dark-purple;
   border-right: 5px solid $dark-purple;
