--- a/sass/content_design/_listOfBlogPost.scss
+++ b/sass/content_design/_listOfBlogPost.scss
@@ -13,7 +13,7 @@
 
 
     .list-blog-post--flexbox--onebox{
-       flex:1 0 400px;
+       flex:1 0 350px;
        background-color:  $light-purple;
        margin:20px;
        padding:0;
