--- a/sass/style.css
+++ b/sass/style.css
@@ -9,7 +9,7 @@ body, html {
   flex-direction: column; }
 
 .container-content {
-  margin: 0 75px;
+  margin: 20px 75px 0 75px;
   padding: 10px;
   border-left: 5px solid #3b0f40;
   border-right: 5px solid #3b0f40;
@@ -43,7 +43,7 @@ body, html {
   flex-direction: column; }
 
 .container-content {
-  margin: 0 75px;
+  margin: 20px 75px 0 75px;
   padding: 10px;
   border-left: 5px solid #3b0f40;
   border-right: 5px solid #3b0f40;
@@ -74,8 +74,7 @@ button, a {
   box-shadow: 0 30px 0 0 #887590;
   display: flex;
   flex-flow: row nowrap;
-  justify-content: space-between;
-  margin-bottom: 20px; }
+  justify-content: space-between; }
   .container-header .logo-container {
     margin: 10px 20px 10px 10px;
     height: 80px;
@@ -197,7 +196,7 @@ body, html {
   flex-direction: column; }
 
 .container-content {
-  margin: 0 75px;
+  margin: 20px 75px 0 75px;
   padding: 10px;
   border-left: 5px solid #3b0f40;
   border-right: 5px solid #3b0f40;
@@ -241,7 +240,7 @@ body, html {
   flex-direction: column; }
 
 .container-content {
-  margin: 0 75px;
+  margin: 20px 75px 0 75px;
   padding: 10px;
   border-left: 5px solid #3b0f40;
   border-right: 5px solid #3b0f40;
@@ -305,7 +304,7 @@ body, html {
   flex-direction: column; }
 
 .container-content {
-  margin: 0 75px;
+  margin: 20px 75px 0 75px;
   padding: 10px;
   border-left: 5px solid #3b0f40;
   border-right: 5px solid #3b0f40;
@@ -336,7 +335,7 @@ button, a {
   align-content: space-between;
   margin: 0; }
   .list-blog-post-container .list-blog-post--flexbox .list-blog-post--flexbox--onebox {
-    flex: 1 0 400px;
+    flex: 1 0 350px;
     background-color: #7d4290;
     margin: 20px;
     padding: 0;
